# lobby-client-lib

./: Cargo.toml  README.md
lobby-lib/: Cargo.toml
lobby-lib/src/: lib.rs
lobby-lib/src/net/: connection.rs  connection_manager.rs  mod.rs  packet.rs  packet_decoder.rs  packet_encoder.rs  packets.rs  socket_manager.rs  socket_poller.rs  structs.rs
lobby-lib/src/net/transport/: tcp_socket.rs
lobby-lib/src/utils/: buffer_processor.rs  byte_buffer.rs  mod.rs  time.rs  timers.rs
src/: application.rs  main.rs  renderer.rs  time.rs  ui.rs
src/ui/: mod.rs
src/ui/screens/: chat_screen.rs  events_screen.rs  friend_list_screen.rs  home_screen.rs  lobby_screen.rs  login_screen.rs  mod.rs  root_screen.rs
