[package]
name = "lobby-client-lib"
version = "0.1.0"
authors = ["Léonard Besson <leonard.besson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
lobby-lib = { path = "lobby-lib" }

futures = "0.3.5"
wgpu = "0.5.0"
winit = "0.21"
imgui-wgpu = "0.6.0"
imgui = "0.3.0"
crossbeam-channel = "0.4.2"

[dependencies.imgui-winit-support]
version = "0.3.1"
features = ["winit-20"]
