[package]
name = "lobby-lib"
version = "0.1.0"
authors = ["Léonard Besson <leonard.besson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
byteorder = "1.3.4"
num-traits = "0.2.11"
num-derive = "0.3.0"
lazy_static = "1.4.0"
bincode = "1.3.1"
log = "0.4.8"

[dependencies.mio]
version = "0.7.0"
features = ["tcp", "os-poll"]

[dependencies.serde]
version = "1.0.110"
features = ["derive"]
